2004-06-24  JP Rosevear  <jpr@novell.com>

	* gui/dialogs/alarm-list-dialog.c (selection_changed_cb):
	sensitize the buttons
	(init_widgets): listen for selection changes so we can delete
	alarms

2004-06-24  JP Rosevear  <jpr@novell.com>

	* gui/dialogs/event-page.c (event_page_fill_component): store all
	the custom alarms
	(alarm_custom_clicked_cb): emit changed signal if necessary

	* gui/dialogs/alarm-list-dialog.c (alarm_list_dialog_run): return
	true/false based on button pushed

	* gui/dialogs/alarm-dialog.c: move repeat options and per alarm
	type options here

	* gui/dialogs/alarm-dialog.glade: ditto
	
	* gui/dialogs/Makefile.am: remove alarm options dialog

2004-06-24  Rodney Dawes  <dobey@novell.com>

	* gui/calendar-component.c (create_component_view):
	* gui/tasks-component.c (create_component_view):
	Add a call to e_source_selector_set_select_new here so that we can
	select new sources when we create them

2004-06-23  Jeffrey Stedfast  <fejj@novell.com>

	* conduits/todo/todo-conduit.c: Bump the version to 0.1.5 to help
	track down bug #59726.

2004-06-23  JP Rosevear  <jpr@novell.com>

	* gui/dialogs/comp-editor.c (comp_editor_init): set the window
	type hint to normal so it can go below the shell window

2004-06-23  Rodrigo Moya <rodrigo@novell.com>

	* gui/dialogs/comp-editor.c (comp_editor_notify_client_changed):
	fixed gtk-doc comments and made it enable/disable the dialog's
	OK button depending on the selected source.

2004-06-23  Rodney Dawes  <dobey@novell.com>

	* gui/calendar-component.c: Revert previous change to add the
	callbacks for notification of calendar selection changes
	(create_new_view): Update the comment for watching notification on
	the tasks selection to state it is for the mini tasks view

2004-06-23 JP Rosevear  <jpr@novell.com>

	Fixes #57862
	
	* gui/gnome-cal.c (connect_day_view_focus): connect after the
	focus events happen so the day view knows what is selected

2004-06-23  JP Rosevear  <jpr@novell.com>
