@@ -32,6 +32,7 @@
 #include <gconf/gconf-client.h>
 #include <libecal/e-cal.h>
 #include <shell/e-user-creatable-items-handler.h>
+#include <shell/e-component-view.h>
 #include "e-cal-model.h"
 #include "e-tasks.h"
 #include "tasks-component.h"
@@ -983,16 +984,15 @@ view_destroyed_cb (gpointer data, GObject *where_the_object_was)
 	}
 }
 
-static void
-impl_createControls (PortableServer_Servant servant,
-		     Bonobo_Control *corba_sidebar_control,
-		     Bonobo_Control *corba_view_control,
-		     Bonobo_Control *corba_statusbar_control,
-		     CORBA_Environment *ev)
+static GNOME_Evolution_ComponentView
+impl_createView (PortableServer_Servant servant,
+		 GNOME_Evolution_ShellView parent,
+		 CORBA_Environment *ev)
 {
 	TasksComponent *component = TASKS_COMPONENT (bonobo_object_from_servant (servant));
 	TasksComponentPrivate *priv;
 	TasksComponentView *component_view;
+	EComponentView *ecv;
 	
 	priv = component->priv;
 
@@ -1002,16 +1002,17 @@ impl_createControls (PortableServer_Servant servant,
 		/* FIXME Should we describe the problem in a control? */
 		bonobo_exception_set (ev, ex_GNOME_Evolution_Component_Failed);
 
-		return;
+		return CORBA_OBJECT_NIL;
 	}
 
 	g_object_weak_ref (G_OBJECT (component_view->view_control), view_destroyed_cb, component);
 	priv->views = g_list_append (priv->views, component_view);
-	
-	/* Return the controls */
-	*corba_sidebar_control = CORBA_Object_duplicate (BONOBO_OBJREF (component_view->sidebar_control), ev);
-	*corba_view_control = CORBA_Object_duplicate (BONOBO_OBJREF (component_view->view_control), ev);
-	*corba_statusbar_control = CORBA_Object_duplicate (BONOBO_OBJREF (component_view->statusbar_control), ev);
+
+	/* TODO: Make TasksComponentView just subclass EComponentView */
+	ecv = e_component_view_new_controls (parent, "tasks", component_view->sidebar_control,
+					     component_view->view_control, component_view->statusbar_control);
+
+	return BONOBO_OBJREF(ecv);
 }
 
 static GNOME_Evolution_CreatableItemTypeList *
@@ -1134,7 +1135,7 @@ tasks_component_class_init (TasksComponentClass *klass)
 	parent_class = g_type_class_peek_parent (klass);
 
 	epv->upgradeFromVersion      = impl_upgradeFromVersion;
-	epv->createControls          = impl_createControls;
+	epv->createView              = impl_createView;
 	epv->_get_userCreatableItems = impl__get_userCreatableItems;
 	epv->requestCreateItem       = impl_requestCreateItem;
 
